# the_many_benefits_of_lua

./: .gitignore  README.md
lua_in_lua_on_STM32/: .mxproject  Makefile  lua_in_lua_on_STM32.ioc  no_lua_nm.txt
lua_in_lua_on_STM32/Core/Src/: lua_hal_STM32F4.c  lua_hal_STM32F4_reduced.c  main.c
lua_in_lua_on_rpi_pico/: CMakeLists.txt  lua_hal.h  lua_hal_RP2040.c  main.c
lua_on_STM32/: .mxproject  Makefile  STM32F411XX_FLASH.ld  lua_on_STM32.ioc
lua_on_STM32/Core/Inc/: luaconf.h
lua_on_STM32/Core/Src/: main.c  syscalls.c
